k8s-todo-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-server
  labels:
    name: todo-server
spec:
  containers:
  - name: todo-server
    image: docker.io/somedevdude/todo-server:latest
    livenessProbe:
      httpGet:
          path: /healthcheck
          port: 8080
      initialDelaySeconds: 5
      periodSeconds: 10
      failureThreshold: 3
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
        name: http
        protocol: TCP
