todo-app-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todo-server
  labels:
    name: todo-server
spec:
  containers:
  - name: todo-server
    image: docker.io/somedevdude/todo-server:latest
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
