k8s-todo-database-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-database-service
spec:
  ports:
  - port: 3306
  selector:
    app: todo-app
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-database-deployment
spec:
  selector:
    matchLabels:
      app: todo-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-app
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: todo-database
        ports:
        - containerPort: 3306
          name: todo-database
        volumeMounts:
        - name: todo-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: todo-persistent-storage
        persistentVolumeClaim:
          claimName: todo-pv-claim
