k8s-todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
