todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  selector:
    app: todo-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
